fix: change button colors to contrast against background

--- a/css/styles.css
+++ b/css/styles.css
@@ -171,7 +171,7 @@ button, .button, .skill-bubble, .nav-item, a {
   display: inline-block;
   font-family: var(--font-primary);
   font-weight: 700;
-  background-color: transparent;
+  background-color: #25375c;
   color: var(--light-color-primary);
   border: 2px solid var(--light-color-primary);
   padding: 0.5rem 1.25rem;
@@ -191,7 +191,7 @@ button, .button, .skill-bubble, .nav-item, a {
   width: 100%;
   font-family: var(--font-primary);
   font-weight: 700;
-  background-color: transparent;
+  background-color: #0b1424;
   color: var(--light-color-primary);
   border: 2px solid var(--light-color-primary);
   padding: 0.5rem 1.25rem;
@@ -211,7 +211,7 @@ button, .button, .skill-bubble, .nav-item, a {
   font-family: var(--font-primary);
   font-weight: 700;
   font-size: 0.8rem;
-  background-color: transparent;
+  background-color: #0b1424;
   color: var(--light-color-primary);
   border: 1px solid var(--light-color-primary);
   padding: 0.25rem 0.75rem;
